--- a/HnrsPortRefl.html
+++ b/HnrsPortRefl.html
@@ -14,7 +14,7 @@ University Honors Portfolio, where you will find all sorts of interesting inform
 <meta name = "keywords" content = "software development, information technology, university of cincinnati, Tegan Rohne, 
 university honors program">
 
-<title> <title> Tegan's UHP Portfolio - Year in Review </title> </title>
+<title> Tegan's UHP Portfolio - Year in Review </title>
 
 <link rel = "stylesheet" href = "HnrsPortStyle.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P"> <!-- Pixel Text! -->
