--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -46,14 +46,37 @@ university honors program">
 
 <main>
 
-<img src = "Pictures/iSureHopeItDoes.png" alt = "Road work ahead" class = "RoadWorkSign">
+<img src = "Pictures/HomePic.jpg" alt = "Picture of outdoor lounge area at University of Cincinnati overlooking pretty sunset" class = "FrontPic">
 
 <h2> All The Fun Stuff! </h2>
 
 <p> 
-Unfortunately, I have run out of time to work on this segment of the website in time to post it, so it will have to be
-left blank for now. I promise I'll add some fun stuff here soon! 
+This is a webpage devoted to all of my fun and mostly inconsequential side projects. Some are art-related, some are crafts, and all
+of them are sheerly made for the joy and passion I have for creating odd and whimsical things. I hope you enjoy!
 </p>
+
+<p style = "text-align: center"> <span class = "VeryImp">* WARNING: Content on this page may be a little wacky, a little silly,
+and may not be suitable for a professional resume. Be prepared for randomness. *</span> </p>
+
+<hr>
+
+<h2> Daily Bug Art </h2>
+
+<p> 
+If you couldn't already tell, I am a massive fan of bugs. Big or small, delicate or dangerous - I think they're unique and beautiful,
+and every time I'm outside in nature, they're the first thing to catch my eye. I also happen to possess some decently-trained art
+skill. So, I put two and two together, and started a series of bug artwork online for everyone to enjoy! Some are bugs local to the
+area, while others are species I found while fluttering through the web. One day I hope that more people find this artwork, and that
+they begin to see the beauty I see in them, and appreciate them more as a vital part of our world's ecosystems. 
+</p>
+
+<p> 
+I have 50 days of daily bug art planned, so be sure to check back if you like what you see!
+</p>
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSYAsZKpaNOTxw8xjfbJmmNluocxiy1vy7u23IEMrh375RgHjsE7GBqtqBrzksBQ-0cY4Tj6sJiMbmS/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<hr>
 
 <hr>
 
