--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -46,7 +46,7 @@ university honors program">
 
 <main>
 
-<img src = "Pictures/HomePic.jpg" alt = "Picture of outdoor lounge area at University of Cincinnati overlooking pretty sunset" class = "FrontPic">
+<img src = "Pictures/FunPic.jpeg" alt = "Picture of a street taken outside of University of Cincinnati" class = "FrontPic">
 
 <h2> All The Fun Stuff! </h2>
 
