--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ university honors program">
 <a href = "index.html" class = "active"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -81,6 +82,13 @@ A page with information about me and my unique story to tell. It's interesting -
 
 <dd>
 A page detailing the different clubs and causes I'm involved with!
+</dd>
+
+<dt> Gateway </dt>
+
+<dd>
+A story about an experience prior to starting the University Honors Program. It's a bit long and wordy, but it might be of
+interest to you. 
 </dd>
 
 <dt> Experiences </dt>
