--- a/HnrsPortAbout.html
+++ b/HnrsPortAbout.html
@@ -27,6 +27,7 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html" class = "active"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -131,6 +132,39 @@ person that has tried to tear me down, I've only grown and improved. I am an ent
 knowledge or take on a new challenge - and nobody is going to stand in my way. 
 </p>
 
+<hr>
+
+<h2> My Main Strengths </h2> 
+
+<p>
+One of the many aspects of the University Honors Program is being able to recognize your strengths and how they play into your role 
+as a global citizen scholar. So, I'm including my top five VIA character strengths on this website because it seems relevant to
+the program. Now, whether or not you think I truly exhibit these strengths is up to your interpretation. At the end of the day, 
+each and every single person out there is going to have a different image of me in their minds. But these are the top five character
+strengths that the computer gave me, and for the most part, are the ones that resonate most with me. 
+</p>
+
+<p>
+Additionally, if you would like to take the text for yourself, the link is right <a href  = "https://www.viacharacter.org/" target = "_blank">here!</a>
+It's a very nice tool for assessing what strengths you have for yourself, especially if you have a tough time seeing the positives in
+yourself above all of the negativity you might feel. You're already an awesome person for taking the time to visit my site, but this
+test will further help you to see the awesome within yourself, and what traits specifically that you have as strengths. 
+</p>
+
+<table class = "CharacterTable">
+
+<tr>
+
+<td> Kindness </td>
+<td> Fairness </td>
+<td> Curiousity </td>
+<td> Humility </td>
+<td> Appreciation of Beauty & Excellence </td>
+
+</tr>
+
+</table>
+
 <br>
 
 <hr>
@@ -142,8 +176,8 @@ knowledge or take on a new challenge - and nobody is going to stand in my way.
 <img src = "Pictures/TigerMothPic.jpeg" alt = "Picture of my favorite species of moth, Apantesis phalerata, on a plant in my front yard" class = "FactPic1">
 
 <p>
-I am a huge fan of bugs, especially butterflies and moths, and I'm always looking for opportunities to let them crawl up onto my hands for a 
-cool picture!
+I am a huge fan of bugs, especially lepidoptera and odonata, and I'm always looking for opportunities to let them crawl 
+up onto my hands for a cool picture!
 
 <br>
 <br>
