--- a/HnrsPortContact.html
+++ b/HnrsPortContact.html
@@ -27,6 +27,7 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
