--- a/HnrsPortInvolvement.html
+++ b/HnrsPortInvolvement.html
@@ -27,6 +27,7 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html" class = "active"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -51,44 +52,25 @@ university honors program">
 <h2> Cool Things I'm Involved With! </h2>
 
 <p>
-Below is a list of all of the clubs and organizations I'm either a member of or volunteer for! They're all amazing groups of people, so I highly
-reccomend that you check them out if you have any interest in them! 
+Below is a list of all of the clubs and organizations I'm either a member of or volunteer for, as well as some things I'm involved with 
+outside of campus life! They're all amazing groups of people, so I highly reccomend that you check them out if you have any interest in them! 
 </p>
-
-<div class = "FunFact1">
-
-<p>
-I am currently a member of the UC CubeCats! They are a student-run organization that works on cube sattelites and weather balloons. I'm currently
-a member of their CATiSE program, and I'm hoping to advance to their CubeSat program this spring!
-
-<br>
-<br>
-
-For more information, I encourage you to check out their very own website linked <a href = "https://uccubecats.github.io/" target = "_blank">
-here!</a> They're a very cool group, and have connections with NASA and other professionals in engineering! 
-</p>
-
-<img src = "Pictures/CubeCatsLogo.png" alt = "University of Cincinnati Cube Cats Logo" class = "FactPic1">
-
-</div>
-
-<br>
 
 <div class = "FunFact2">
 
-<img src = "Pictures/SelfDefenseLogo.jpg" alt = "University of Cincinnati Self Defense Club Logo" class = "FactPic2">
+<img src = "Pictures/CornEarwormPic.jpeg" alt = "A very fluffy corn earworm moth perched on my finger" class = "FactPic2">
 
 <p>
-I am also currently a member of the UC Self-Defense Club! They host self-defense classes on campus led by trained professionals. I joined
-because I'm short and look like an easy target, so it would be useful for me to know how to defend myself if I run into anyone dangerous out 
-on the streets of Cincinnati. 
+I am currently an active member of the Butterflies and Moths of North America (BAMONA) project! BAMONA is a project for 
+collecting information about Lepidoptera through citizen science. You can submit any pictures of butterflies
+and moths to the website as long as you include where and when they're taken, and they'll help you to identify the species (or 
+confirm your own identification if you identified it yourself), in exchange for providing them information!
 
 <br>
 <br>
 
-For more information, I encourage you to check out their page on GetInvolvedUC linked 
-<a href = "https://campuslink.uc.edu/organization/ucsd" target = "_blank">here!</a> They're open to everyone and have 3 classes listed on their 
-page you can attend!
+For more information, I encourage you to check out their website linked 
+<a href = "https://www.butterfliesandmoths.org/" target = "_blank">here!</a> 
 </p>
 
 </div>
@@ -109,6 +91,26 @@ They're very welcoming of newcomers and, if there's spots available, likely woul
 </p>
 
 <img src = "Pictures/CincyHillelLogo.png" alt = "Cincinnati Hillel Logo" class = "FactPic1">
+
+</div>
+
+<br>
+
+<div class = "FunFact2">
+
+<img src = "Pictures/ChurchLogo.jpg" alt = "A very fluffy corn earworm moth perched on my finger" class = "FactPic2">
+
+<p>
+I am also volunteering for the Homework Club, hosted at the Washington United Church of Christ! It is a secular club centered around
+providing tutoring and after school help to low-income elementary school-aged children. I've worked with children at my church in 
+the past, so this is a great way for me to further grow my skills in helping children.
+
+<br>
+<br>
+
+For more information, I encourage you to check out their website linked 
+<a href = "https://www.washingtonucc.org/" target = "_blank">here!</a> 
+</p>
 
 </div>
 
