--- a/HnrsPortRefl.html
+++ b/HnrsPortRefl.html
@@ -14,7 +14,7 @@ University Honors Portfolio, where you will find all sorts of interesting inform
 <meta name = "keywords" content = "software development, information technology, university of cincinnati, Tegan Rohne, 
 university honors program">
 
-<title> Tegan's UHP Portfolio - Year in Review </title>
+<title> <title> Tegan's UHP Portfolio - Year in Review </title> </title>
 
 <link rel = "stylesheet" href = "HnrsPortStyle.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P"> <!-- Pixel Text! -->
@@ -28,6 +28,7 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html" class = "active"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
