--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -27,6 +27,7 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
+<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html" class = "active"> Fun Stuff :] </a>
@@ -46,7 +47,7 @@ university honors program">
 
 <main>
 
-<img src = "Pictures/FunPic.jpeg" alt = "Picture of a street taken outside of University of Cincinnati" class = "FrontPic">
+<img src = "Pictures/NewFunPic.jpeg" alt = "Picture of a street taken outside of University of Cincinnati" class = "FrontPic">
 
 <h2> All The Fun Stuff! </h2>
 
@@ -75,6 +76,55 @@ I have 50 days of daily bug art planned, so be sure to check back if you like wh
 </p>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSYAsZKpaNOTxw8xjfbJmmNluocxiy1vy7u23IEMrh375RgHjsE7GBqtqBrzksBQ-0cY4Tj6sJiMbmS/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<hr>
+
+<h2> Pikmin Bloom </h2>
+
+<p>
+By the same creators of Pokemon Go, there is a game that I believe is even better called Pikmin Bloom. You walk around, and the game
+tracks your steps. Along the way, you can collect seedlings to grow into silly little Pikmin to follow you around, and eventually
+collect enough petals from them to plant flowers as you walk!
+<p>
+
+<p>
+It's a very wholesome little game, and it is a very fun way to track the amount of steps you walk around campus from day to day, all
+the while feeling rewarded as you collect new Pikmin and plant pretty flowers on the map of our campus! I highly reccomend giving the 
+game a try. You can download it on the App Store or Google Play for your mobile device and create an account to get started!
+</p>
+
+<p>
+You also won't be starting this journey alone, as I'm placing my friend code here for you to friend me! So, if you're starting playing
+it for the first time, feel free to friend me! And if you already regularly enjoy playing this game, you can still add a new friend
+to your friend list! 
+</p>
+
+<div class = "FunFact2">
+
+<p>
+<span class = "Imp">Username: </span> FlowerPower45
+
+<br>
+<br>
+
+<span class = "Imp">Friend Code: </span> 5877 2759 8269
+
+<br>
+<br>
+
+<span class = "Imp">Current Level: </span> 29 
+
+<br>
+<br>
+
+<span class = "Imp">Current Total Steps: </span> 995,371
+
+</p>
+
+<img src = "Pictures/PikminQR.jpeg" alt = "Scan this" class = "FactPic2">
+
+
+</div>
 
 <hr>
 
