--- a/HnrsPortGateway.html
+++ b/HnrsPortGateway.html
@@ -121,6 +121,25 @@ website I create. What they’re going to remember is my kindness towards them a
 
 <hr>
 
+<h2> Visual Aids </h2>
+
+<p>
+For this page, I've included 3 pictures. One of the trophy I had won for winning the regional level competition and being able to 
+move on to state, one of the convention center food court in Columbus, and one of the famous Face. I chose the first picture because
+it's relevant to the story, and proves that I won the initial competition to go to Columbus. The second image was chosen to show
+the magnitude of the event and give a better idea of where my learning experience took place. And the last image was something 
+more lighthearted I saw while I was there. Stories about unsuccessful events aren't always the most enjoyable things to read,
+so I wanted to include something more silly to lighten the mood a little. 
+</p>
+
+<p>
+Ultimately, the three photos I chose were mostly a means to proof of the fact that I attended this event and that everything 
+on this page happened in real life. Even though it was disheartening to lose, I learned a lot and still tried to have fun while
+I was out on this important trip to Columbus. 
+</p>
+
+<hr>
+
 </main>
 
 <footer>
