--- a/HnrsPortAbout.html
+++ b/HnrsPortAbout.html
@@ -63,10 +63,8 @@ university honors program">
 
 <p style = "text-align: center"> <span class = "VeryImp">* Click on the boxes to see their content! *</span> </p>
 
-<button type = "button" class = "Collapsible"> Key Information </button>
-
-<div class = "CollapsibleContent">
-
+<h2> Key Information </h2>h2>
+ 
 <p> <span class = "Imp">Name:</span> Tegan Rohne </p>
 
 <p> <span class = "Imp">Pronouns:</span> she/her </p>
@@ -89,14 +87,9 @@ university honors program">
 
 <p style = "text-align: center"> <span class = "VeryImp">* This is all very important information - I swear! *</span> </p>
 
-</div>
+<hr>
 
-<br>
-<br>
-
-<button type = "button" class = "Collapsible"> My Story </button>
-
-<div class = "CollapsibleContent">
+<h2> My Story </h2>
 
 <h2> My Story </h2>
 
@@ -145,14 +138,9 @@ person that has tried to tear me down, I've only grown and improved. I am an ent
 knowledge or take on a new challenge - and nobody is going to stand in my way. 
 </p>
 
-</div>
+<hr>
 
-<br>
-<br>
-
-<button type = "button" class = "Collapsible"> My Strengths </button>
-
-<div class = "CollapsibleContent2">
+<h2> My Strengths </h2>
 
 <p>
 One of the many aspects of the University Honors Program is being able to recognize your strengths and how they play into your role 
@@ -183,17 +171,9 @@ test will further help you to see the awesome within yourself, and what traits s
 
 </table>
 
-</div>
+<hr>
 
-<br>
-<br>
-
-<button type = "button" class = "Collapsible"> Other Facts </button>
-
-<div class = "CollapsibleContent2">
-
-
-<br>
+<h2> Other Facts </h2>
 
 <div class = "FunFact1">
 
@@ -239,8 +219,6 @@ living even if I can't currently own a pet due to me living in a dorm, and I lik
 provide me with fresh oxygen! I currently have four plants: two succulents, one unidentified plant, and one pot of seeds that 
 have yet to sprout. 
 </p>
-
-</div>
 
 </div>
 
