--- a/HnrsPortAbout.html
+++ b/HnrsPortAbout.html
@@ -63,8 +63,10 @@ university honors program">
 
 <p style = "text-align: center"> <span class = "VeryImp">* Click on the boxes to see their content! *</span> </p>
 
-<h2> Key Information </h2>h2>
- 
+<button type = "button" class = "Collapsible"> Key Information </button>
+
+<div class = "CollapsibleContent">
+
 <p> <span class = "Imp">Name:</span> Tegan Rohne </p>
 
 <p> <span class = "Imp">Pronouns:</span> she/her </p>
@@ -87,9 +89,14 @@ university honors program">
 
 <p style = "text-align: center"> <span class = "VeryImp">* This is all very important information - I swear! *</span> </p>
 
-<hr>
+</div>
 
-<h2> My Story </h2>
+<br>
+<br>
+
+<button type = "button" class = "Collapsible"> My Story </button>
+
+<div class = "CollapsibleContent">
 
 <h2> My Story </h2>
 
@@ -138,9 +145,14 @@ person that has tried to tear me down, I've only grown and improved. I am an ent
 knowledge or take on a new challenge - and nobody is going to stand in my way. 
 </p>
 
-<hr>
+</div>
 
-<h2> My Strengths </h2>
+<br>
+<br>
+
+<button type = "button" class = "Collapsible"> My Strengths </button>
+
+<div class = "CollapsibleContent2">
 
 <p>
 One of the many aspects of the University Honors Program is being able to recognize your strengths and how they play into your role 
@@ -171,9 +183,17 @@ test will further help you to see the awesome within yourself, and what traits s
 
 </table>
 
-<hr>
+</div>
 
-<h2> Other Facts </h2>
+<br>
+<br>
+
+<button type = "button" class = "Collapsible"> Other Facts </button>
+
+<div class = "CollapsibleContent2">
+
+
+<br>
 
 <div class = "FunFact1">
 
@@ -219,6 +239,8 @@ living even if I can't currently own a pet due to me living in a dorm, and I lik
 provide me with fresh oxygen! I currently have four plants: two succulents, one unidentified plant, and one pot of seeds that 
 have yet to sprout. 
 </p>
+
+</div>
 
 </div>
 
