--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@ See the rocket ship flying in the right-hand corner? Click it and you'll be blas
 
 </dl> <!-- END OF DEFINITION LIST -->
 
+<div class = "FunFact1">
+
+<p>
+Did you know I also developed another website? Last year, I was tasked with creating a website for Fido's Freezzy's so that they
+can advertise their new product, Yobitz! You can find that website linked <a href = "http://fidosfreezzys.com" target = "_blank">here!</a>
+
+<br>
+<br>
+
+I'd highly appreciate it if you checked it, and by extension their business, out! They're very nice people and their frozen dog desserts
+sound like they'd be a great treat for your pet!
+
+</p>
+
+<img src = "Pictures/FidosLogo.png" alt = "Fido's Freezzys logo" class = "FactPic3">
+
+</div>
+
 <hr>
 
 </main>
