--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -52,89 +52,14 @@ university honors program">
 <h2> All The Fun Stuff! </h2>
 
 <p> 
-This is a webpage devoted to all of my fun and mostly inconsequential side projects. Some are art-related, some are crafts, and all
-of them are were included to help make this website as enjoyable to visit as possible. So I hope you enjoy!
+...Just kidding. There is no fun stuff. 
 </p>
 
-<p style = "text-align: center"> <span class = "VeryImp">* Click on the boxes to see their content! *</span> </p>
-
-<button type = "button" class = "Collapsible"> Daily Bug Art </button>
-
-<div class = "CollapsibleContent">
-
-<p> 
-If you couldn't already tell, I am a massive fan of bugs. Big or small, delicate or dangerous - I think they're unique and beautiful,
-and every time I'm outside in nature, they're the first thing to catch my eye. I also happen to possess some decently-trained art
-skill. So, I put two and two together, and started a series of bug artwork online for everyone to enjoy! Some are bugs local to the
-area, while others are species I found while fluttering through the web. One day I hope that more people find this artwork, and that
-they begin to see the beauty I see in them, and appreciate them more as a vital part of our world's ecosystems. 
-</p>
-
-<p> 
-I have 50 days of daily bug art planned, so be sure to check back if you like what you see!
-</p>
-
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSYAsZKpaNOTxw8xjfbJmmNluocxiy1vy7u23IEMrh375RgHjsE7GBqtqBrzksBQ-0cY4Tj6sJiMbmS/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
-<br>
-<br>
-
-</div>
-
-<br>
-<br>
-
-<button type = "button" class = "Collapsible"> Add me as a friend on Pikmin Bloom! </button>
-
-<div class = "CollapsibleContent2">
-
-<p>
-By the same creators of Pokemon Go, there is a game that I believe is even better called Pikmin Bloom. You walk around, and the game
-tracks your steps. Along the way, you can collect seedlings to grow into silly little Pikmin to follow you around, and eventually
-collect enough petals from them to plant flowers as you walk!
-<p>
-
-<p>
-It's a very wholesome little game, and it is a very fun way to track the amount of steps you walk around campus from day to day, all
-the while feeling rewarded as you collect new Pikmin and plant pretty flowers on the map of our campus! I highly reccomend giving the 
-game a try. You can download it on the App Store or Google Play for your mobile device and create an account to get started!
-</p>
-
-<p>
-You also won't be starting this journey alone, as I'm placing my friend code here for you to friend me! So, if you're starting playing
-it for the first time, feel free to friend me! And if you already regularly enjoy playing this game, you can still add a new friend
-to your friend list! 
-</p>
-
-<div class = "FunFact2">
-
-<p>
-<span class = "Imp">Username: </span> FlowerPower45
-
-<br>
-<br>
-
-<span class = "Imp">Friend Code: </span> 5877 2759 8269
-
-<br>
-<br>
-
-<span class = "Imp">Current Level: </span> 29 
-
-<br>
-<br>
-
-<span class = "Imp">Current Total Steps: </span> 995,371
-
-</p>
-
-<img src = "Pictures/PikminQR.jpeg" alt = "Scan this" class = "FactPic2">
-
-</div>
-
-</div>
-
-<hr>
+ <p>
+  Well, that's not entirely true. There is fun stuff. Just not here. And not now. I'm going to be re-vamping this page coming
+  soon, as well as giving aspects of this website a new look. I promise there will be new content on this page eventually.
+  Maybe. We'll see. 
+ </p>
 
 </main>
 
