--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -52,14 +52,8 @@ university honors program">
 <h2> All The Fun Stuff! </h2>
 
 <p> 
-...Just kidding. There is no fun stuff. 
+I am currently in the progress of revamping this page. Thank you for viewing this page though! I'm hoping to display some of my artwork here in the future. 
 </p>
-
- <p>
-  Well, that's not entirely true. There is fun stuff. Just not here. And not now. I'm going to be re-vamping this page coming
-  soon, as well as giving aspects of this website a new look. I promise there will be new content on this page eventually.
-  Maybe. We'll see. 
- </p>
 
 </main>
 
