--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ university honors program">
 <a href = "index.html" class = "active"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
-<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -57,7 +56,7 @@ Hello! I am Tegan Rohne, and this is my learning portfolio for the University Ho
 all of my work for the honors program, as well as some other fun things! 
 </p>
 
-<h2> How To Navigate </h2>
+<h3> How To Navigate </h3>
 
 <p> 
 Each of the sections of this site contains information about me, whether it be my honors experiences and reflections, or other unique things I've
@@ -84,23 +83,16 @@ A page with information about me and my unique story to tell. It's interesting -
 A page detailing the different clubs and causes I'm involved with!
 </dd>
 
-<dt> Gateway </dt>
-
-<dd>
-A story about an experience prior to starting the University Honors Program. It's a bit long and wordy, but it might be of
-interest to you. 
-</dd>
-
 <dt> Experiences </dt>
 
 <dd>
-A page including information on all of my honors experiences! I haven't experienced these, so it's currently blank. 
+A page including information on all of my honors experiences!
 </dd>
 
 <dt> Year In Review </dt>
 
 <dd>
-A page reviewing each year of my time here at University of Cincinnati. I haven't completed a full year yet, so this is also blank. Sorry! 
+A page reviewing each year of my time here at University of Cincinnati. 
 </dd>
 
 <dt> Fun Stuff </dt>
@@ -123,23 +115,10 @@ See the rocket ship flying in the right-hand corner? Click it and you'll be blas
 
 </dl> <!-- END OF DEFINITION LIST -->
 
-<div class = "FunFact1">
-
 <p>
-Did you know I also developed another website? Last year, I was tasked with creating a website for Fido's Freezzy's so that they
-can advertise their new product, Yobitz! You can find that website linked <a href = "http://fidosfreezzys.com" target = "_blank">here!</a>
-
-<br>
-<br>
-
-I'd highly appreciate it if you checked it, and by extension their business, out! They're very nice people and their frozen dog desserts
-sound like they'd be a great treat for your pet!
-
+And no - I don't actually think you need this to see this website, nor do I expect you to read it. I simply don't know what else to 
+put on the home page. Have fun visiting this site! I'm happy you landed in this little star system of cyberspace!
 </p>
-
-<img src = "Pictures/FidosLogo.png" alt = "Fido's Freezzys logo" class = "FactPic3">
-
-</div>
 
 <hr>
 
